--- a/Landing page/styles.css
+++ b/Landing page/styles.css
@@ -18,3 +18,11 @@ header {
 .navLink {
     text-align: end;
 }
+
+.pointer {
+    cursor: pointer;
+}
+
+li:hover {
+    background-color: lightblue;
+}
